deploy/k8s/overlays/prod/ingress-www-redirect.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nylon-legs-manhua-www-redirect
  annotations:
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    nginx.ingress.kubernetes.io/permanent-redirect: https://nylon-legs-manhua.lol$request_uri
    nginx.ingress.kubernetes.io/permanent-redirect-code: "308"
spec:
  ingressClassName: nginx
  tls:
    - secretName: nylon-legs-manhua-live-tls
      hosts:
        - www.nylon-legs-manhua.lol
  rules:
    - host: www.nylon-legs-manhua.lol
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: nylon-legs-manhua
                port:
                  number: 80
