deploy/k8s/overlays/prod/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nylon-legs-manhua
  annotations:
    acme.cert-manager.io/http01-edit-in-place: "true"
    cert-manager.io/cluster-issuer: letsencrypt-prod
    cert-manager.io/issue-temporary-certificate: "true"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
spec:
  ingressClassName: nginx
  tls:
    - secretName: nylon-legs-manhua-live-tls
      hosts:
        - nylon-legs-manhua.lol
        - www.nylon-legs-manhua.lol
  rules:
    - host: nylon-legs-manhua.lol
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: nylon-legs-manhua
                port:
                  number: 80
    - host: www.nylon-legs-manhua.lol
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: nylon-legs-manhua
                port:
                  number: 80
